<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button_desc_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="button_desc_scores_app">SCORES APP</string>
    <string name="button_desc_library_app">LIBRARY APP</string>
    <string name="button_desc_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_desc_xyz_reader">XYZ READER</string>
    <string name="button_desc_capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_text_spotify_streamer">This button will land my Spotify Streamer app!</string>
    <string name="toast_text_scores_app">This button will land my Scores app!</string>
    <string name="toast_text_library_app">This button will land my Library app!</string>
    <string name="toast_text_build_it_bigger">This button will land my Build It Bigger app!</string>
    <string name="toast_text_xyz_reader">This button will land my XYZ Reader app!</string>
    <string name="toast_text_capstone">This button will land my Capstone app!</string>
</resources>
