<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AppPortfolio">

    <TextView android:text="@string/my_nanodegree_apps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark_material_dark"
        android:gravity="center"
        android:id="@+id/activity_heading"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_heading"
        android:id="@+id/button_spotify_streamer"
        android:text="@string/button_desc_spotify_streamer"
        android:gravity="center"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="openSpotifyStreamer"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_spotify_streamer"
        android:id="@+id/button_scores_app"
        android:text="@string/button_desc_scores_app"
        android:gravity="center"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="openScoresApp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_scores_app"
        android:id="@+id/button_library_app"
        android:text="@string/button_desc_library_app"
        android:gravity="center"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="openLibraryApp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_library_app"
        android:id="@+id/button_build_it_bigger"
        android:text="@string/button_desc_build_it_bigger"
        android:gravity="center"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="openBuildItBigger"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_build_it_bigger"
        android:id="@+id/button_xyz_reader"
        android:text="@string/button_desc_xyz_reader"
        android:gravity="center"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="openXYZReader"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_xyz_reader"
        android:id="@+id/button_capstone"
        android:text="@string/button_desc_capstone"
        android:gravity="center"
        android:background="#D81B60"
        android:onClick="openCapstoneProject"/>

</RelativeLayout>
